# bookwormpro-sale

./: .bookworm-progress.md  .env.example  .gitignore  0bug-agent-architecture-review.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  PRICING.md  README.md  SECURITY.md  apply_audit_fixes.py  architecture_health_audit_phase2.md  batch_runner.py  bookworm  bookworm-already-has-routines.md  bwm_constants.py  bwm_logging.py  bwm_state.py  bwm_time.py  check.bat  cli-config.yaml.example  cli.py  constraints-termux.txt  docker-compose.yml  findings.md  fix_gateway_env.ps1  flake.nix  gateway_service.py  install.bat  install.sh  install_gateway.ps1  mcp_serve.py  mini_swe_runner.py  model_tools.py  package-lock.json  package.json  progress.md  (+14 more)
.github/: PULL_REQUEST_TEMPLATE.md
.plans/: openai-api-server.md  streaming-support.md
acp_adapter/: __init__.py  auth.py  entry.py  permissions.py  server.py  session.py  tools.py
acp_registry/: agent.json
agent/: __init__.py  account_usage.py  anthropic_adapter.py  audit_integration.py  auxiliary_client.py  bedrock_adapter.py  bwr_drift.py  circuit_breaker.py  coding_context.py  context_compressor.cp312-win_amd64.pyd  context_compressor.py  context_references.py  copilot_acp_client.py  credential_pool.py  credential_sources.py  display.py  dns_resolver.py  error_classifier.py  file_safety.py  gemini_cloudcode_adapter.py  gemini_native_adapter.py  gemini_schema.py  google_code_assist.py  google_oauth.py  image_gen_provider.py  image_gen_registry.py  insights.py  learn_prompt.py  memory_integration.py  memory_manager.py  memory_provider.py  memory_search.py  memory_temporal.py  metrics_store.py  model_metadata.py  models_dev.py  moonshot_schema.py  nous_rate_guard.py  prompt_builder.cp312-win_amd64.pyd  prompt_builder.py  (+21 more)
bwm_cli/: __init__.py  audit.py  auth.py  auth_commands.py  auth_credential_store.py  auth_encryption.py  backup.py  banner.py  callbacks.py  canary.py  claw.py  cli_output.py  clipboard.py  codex_models.py  colors.py  commands.py  completion.py  config.py  copilot_auth.py  credential_store.py  cron.py  curses_ui.py  debug.py  default_soul.py  dingtalk_auth.py  doctor.py  dump.py  env_loader.py  fallback_cmd.py  gateway.py  gateway_config_template.yaml  hooks.py  i18n.py  license.py  logs.py  main.py  mcp_config.py  memory_setup.py  model_normalize.py  model_switch.py  (+24 more)
config/: .env.template  config.yaml
cron/: __init__.py  jobs.py  scheduler.py
datagen-config-examples/: example_browser_tasks.jsonl  run_browser_tasks.sh  web_research.yaml
docker/: SOUL.md  entrypoint.sh
docs/: 0bug-final-review-2026-07-09.md  BookwormPRO_v7_Architecture_Comparison.html  audit-sprint-2026-05-06.md  business-plan.html  code-quality-audit-phase2.md  gateway-hardening-rollback.md  gateway-hardening.md  hermes-upgrade-plan-2026-07-09.md  host-bridge.md  p2-1-god-class-split-plan.md  p2-2-layer-violation-plan.md  sale-distribution-guide.md  smr-smart-model-routing.md  smr-upgrade-review-2026-07-09.md  user-manual.html  快速开始.html  演示GIF录制指引.md  用户教程.html
environments/: README.md  __init__.py  agent_loop.py  agentic_opd_env.py  hermes_base_env.py  patches.py  tool_context.py  web_research_env.py
gateway/: __init__.py  channel_directory.py  config.py  delivery.py  hooks.py  mirror.py  pairing.py  restart.py  run.py  runtime_footer.py  session.py  session_context.py  status.py  sticker_cache.py  stream_consumer.py  whatsapp_identity.py
hermes_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
locale/: README.md
nix/: checks.nix  configMergeScript.nix  devShell.nix  lib.nix  nixosModules.nix  packages.nix  python.nix  tui.nix  web.nix
optional-skills/: DESCRIPTION.md
plans/: gemini-oauth-provider.md
plugins/: __init__.py
routing/: accuracy.js  adaptive-disambiguator.js  benchmark.js  bm25-tuner.js  bridge.js  bwr-builder.js  bwr_bridge.py  bwr_hook.py  bwr_reporter.py  compile-rules.js  disambiguation-rules.json  disambiguation-tree.js  domain-capacity-manager.js  domain-classifier.js  embedding-router.js  expand-golden.js  feature-flags.js  fusion-weight-learner.js  golden-set.json  implicit-feedback.js  intent-classifier.js  paths.config.js  route-ab-test.js  route-analyzer.js  route-engine.js  route-feedback.js  route-state.js  route-telemetry.js  sanitize.js  semantic-scorer.js  skill-alias-resolver.js  skill-chain-recommender.js  skill-domain-map.json  skill-retirement-advisor.js  smr_hook.py  soul-metrics.py  synonym-expander.js  synonym-miner.js  synonyms.json  tfidf-engine.js  (+1 more)
scripts/: add_missing_po.py  analyze_empty_po.py  append_gateway_po.py  append_run_agent_po.py  audit-sale.py  build_exe.py  build_sale.py  build_skills_index.py  bwr_drift_decay.py  check.py  compile_i18n.py  contributor_audit.py  debug_empty_po.py  discord-voice-doctor.py  encrypt_skills.py  extract_gateway_po.py  extract_new_po.py  extract_run_agent_po.py  extract_strings.py  fill_po_translations.py  fix_newline_po.py  gen_banner.py  generate_icons.py  generate_license.py  hermes-gateway  hermes_audit.py  i18n_add_po.py  i18n_bulk_v2.py  i18n_coverage_report.py  i18n_doctor.py  i18n_doctor_fstrings.py  i18n_doctor_safe.py  i18n_extract_all.py  i18n_model_tools.py  i18n_pipeline.py  i18n_resolve_conflicts.py  i18n_translate_placeholders.py  i18n_wrap_prints.py  install.cmd  install.ps1  (+29 more)
skills/: .bundled_manifest  .usage.json
soul/: CLAUDE.md  SOUL.md
tests/: conftest.py  test_bwm_constants.py  test_bwm_logging.py  test_cli_skin_integration.py  test_empty_model_fallback.py  test_hermes_constants.py  test_hermes_logging.py  test_hermes_state.py  test_ipv4_preference.py  test_mcp_serve.py  test_minimax_model_validation.py  test_model_tools.py  test_plugin_skills.py  test_project_metadata.py  test_subprocess_home_isolation.py  test_timezone.py  test_toolsets.py  test_trajectory_compressor.py  test_transform_tool_result_hook.py  test_tui_gateway_server.py  test_utils_truthy_values.py
tools/: __init__.py  approval.py  benchmark-hooks.js  browser_camofox.py  browser_tool.py  (+55 more)
(+1579 files in other folders)
