[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bookwormpro"
version = "7.0.0"
description = "BookwormPRO - Self-hosted AI Agent CLI for academic research"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "huakoh" }]
license = { text = "MIT" }
keywords = ["ai", "agent", "cli", "claude", "anthropic", "self-hosted", "chinese", "research"]
dependencies = [
  # Core — pinned to known-good ranges to limit supply chain attack surface
  "openai>=2.21.0,<3",
  "anthropic>=0.39.0,<1",
  "python-dotenv>=1.2.1,<2",
  "fire>=0.7.1,<1",
  "httpx[socks]>=0.28.1,<1",
  "rich>=14.3.3,<15",
  "tenacity>=9.1.4,<10",
  "pyyaml>=6.0.2,<7",
  "requests>=2.33.0,<3",  # CVE-2026-25645
  "jinja2>=3.1.5,<4",
  "pydantic>=2.12.5,<3",
  # Interactive CLI (prompt_toolkit is used directly by cli.py)
  "prompt_toolkit>=3.0.52,<4",
  # Tools
  "exa-py>=2.9.0,<3",
  "firecrawl-py>=4.16.0,<5",
  "parallel-web>=0.4.2,<1",
  "fal-client>=0.13.1,<1",
  # Text-to-speech (Edge TTS is free, no API key needed)
  "edge-tts>=7.2.7,<8",
  # Skills Hub (GitHub App JWT auth — optional, only needed for bot identity)
  "PyJWT[crypto]>=2.12.0,<3",  # CVE-2026-32597
  # Skill encryption (AES-256-GCM) + license signing (Ed25519)
  "cryptography>=42.0,<44",
]

[project.optional-dependencies]
modal = ["modal>=1.0.0,<2"]
daytona = ["daytona>=0.148.0,<1"]
dev = ["debugpy>=1.8.0,<2", "pytest>=9.0.2,<10", "pytest-asyncio>=0.24.0,<1", "pytest-xdist>=3.0,<4", "mcp>=1.2.0,<2", "ty>=0.0.1a29,<0.0.22", "ruff"]
messaging = ["python-telegram-bot[webhooks]>=22.6,<23", "discord.py[voice]>=2.7.1,<3", "aiohttp>=3.13.3,<4", "slack-bolt>=1.18.0,<2", "slack-sdk>=3.27.0,<4", "qrcode>=7.0,<8"]
cron = ["croniter>=6.0.0,<7"]
slack = ["slack-bolt>=1.18.0,<2", "slack-sdk>=3.27.0,<4"]
matrix = ["mautrix[encryption]>=0.20,<1", "Markdown>=3.6,<4", "aiosqlite>=0.20", "asyncpg>=0.29"]
cli = ["simple-term-menu>=1.0,<2"]
tts-premium = ["elevenlabs>=1.0,<2"]
voice = [
  # Local STT pulls in wheel-only transitive deps (ctranslate2, onnxruntime),
  # so keep it out of the base install for source-build packagers like Homebrew.
  "faster-whisper>=1.0.0,<2",
  "sounddevice>=0.4.6,<1",
  "numpy>=1.24.0,<3",
]
pty = [
  "ptyprocess>=0.7.0,<1; sys_platform != 'win32'",
  "pywinpty>=2.0.0,<3; sys_platform == 'win32'",
]
honcho = ["honcho-ai>=2.0.1,<3"]
mcp = ["mcp>=1.2.0,<2"]
homeassistant = ["aiohttp>=3.9.0,<4"]
sms = ["aiohttp>=3.9.0,<4"]
acp = ["agent-client-protocol>=0.9.0,<1.0"]
mistral = ["mistralai>=2.3.0,<3"]
bedrock = ["boto3>=1.35.0,<2"]
termux = [
  # Tested Android / Termux path: keeps the core CLI feature-rich while
  # avoiding extras that currently depend on non-Android wheels (notably
  # faster-whisper -> ctranslate2 via the voice extra).
  "python-telegram-bot[webhooks]>=22.6,<23",
  "bookwormpro[cron]",
  "bookwormpro[cli]",
  "bookwormpro[pty]",
  "bookwormpro[mcp]",
  "bookwormpro[honcho]",
  "bookwormpro[acp]",
]
dingtalk = ["dingtalk-stream>=0.20,<1", "alibabacloud-dingtalk>=2.0.0", "qrcode>=7.0,<8"]
feishu = ["lark-oapi>=1.5.3,<2", "qrcode>=7.0,<8"]
google = [
  # Required by the google-workspace skill (Gmail, Calendar, Drive, Contacts,
  # Sheets, Docs).  Declared here so packagers (Nix, Homebrew) ship them with
  # the [all] extra and users don't hit runtime `pip install` paths that fail
  # in environments without pip (e.g. Nix-managed Python).
  "google-api-python-client>=2.100,<3",
  "google-auth-oauthlib>=1.0,<2",
  "google-auth-httplib2>=0.2,<1",
]
google_chat = [
  # Google Chat 网关适配器 (plugins/platforms/google_chat/): 通过 Pub/Sub 接收
  # 入站事件，通过 Chat REST API 发送出站消息。与 [google] 共享 api-client 和
  # httplib2 传输层，但额外依赖 Pub/Sub 库。
  # google-auth-oauthlib 用于原生附件投递的用户 OAuth 授权流——Chat 的
  # media.upload 端点拒绝服务账号鉴权，因此用户需在聊天中执行一次 /setup-files。
  # 详见 plugins/platforms/google_chat/oauth.py。
  "google-cloud-pubsub>=2.20,<3",
  "google-api-python-client>=2.100,<3",
  "google-auth>=2.20,<3",
  "google-auth-httplib2>=0.2,<1",
  "google-auth-oauthlib>=1.0,<2",
]
# `bookworm dashboard` (localhost SPA + API).  Not in core to keep the default install lean.
web = ["fastapi>=0.104.0,<1", "uvicorn[standard]>=0.24.0,<1"]
rl = [
  # SECURITY NOTE: git hash dependencies bypass pip-audit.
  # TODO: vendor these packages or publish to PyPI for automated security scanning.
  "atroposlib @ git+https://github.com/BookwormPRO/atropos.git@c20c85256e5a45ad31edf8b7276e9c5ee1995a30",
  "tinker @ git+https://github.com/thinking-machines-lab/tinker.git@30517b667f18a3dfb7ef33fb56cf686d5820ba2b",
  "fastapi>=0.104.0,<1",
  "uvicorn[standard]>=0.24.0,<1",
  "wandb>=0.15.0,<1",
]
yc-bench = ["yc-bench @ git+https://github.com/collinear-ai/yc-bench.git@bfb0c88062450f46341bd9a5298903fc2e952a5c ; python_version >= '3.12'"]
all = [
  "bookwormpro[modal]",
  "bookwormpro[daytona]",
  "bookwormpro[messaging]",
  # matrix: python-olm (required by matrix-nio[e2e]) is upstream-broken on
  # modern macOS (archived libolm, C++ errors with Clang 21+).  On Linux the
  # [matrix] extra's own marker pulls in the [e2e] variant automatically.
  "bookwormpro[matrix]; sys_platform == 'linux'",
  "bookwormpro[cron]",
  "bookwormpro[cli]",
  "bookwormpro[dev]",
  "bookwormpro[tts-premium]",
  "bookwormpro[slack]",
  "bookwormpro[pty]",
  "bookwormpro[honcho]",
  "bookwormpro[mcp]",
  "bookwormpro[homeassistant]",
  "bookwormpro[sms]",
  "bookwormpro[acp]",
  "bookwormpro[voice]",
  "bookwormpro[dingtalk]",
  "bookwormpro[feishu]",
  "bookwormpro[google]",
  "bookwormpro[google_chat]",
  "bookwormpro[mistral]",
  "bookwormpro[bedrock]",
  "bookwormpro[web]",
]

[project.scripts]
bookworm = "bwm_cli.main:main"
bookwormpro = "run_agent:main"
bookworm-acp = "acp_adapter.entry:main"

[tool.setuptools]
py-modules = ["run_agent", "model_tools", "toolsets", "batch_runner", "trajectory_compressor", "toolset_distributions", "cli", "bwm_constants", "bwm_state", "bwm_time", "bwm_logging", "rl_cli", "utils"]

[tool.setuptools.package-data]
bwm_cli = ["web_dist/**/*"]

[tool.setuptools.packages.find]
include = ["agent", "agent.*", "tools", "tools.*", "bwm_cli", "gateway", "gateway.*", "tui_gateway", "tui_gateway.*", "cron", "acp_adapter", "plugins", "plugins.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external services (API keys, Modal, etc.)",
    "tier1: Tier 1 smoke tests",
    "tier2: Tier 2 config/auth tests",
    "tier3: Tier 3 feature module tests",
    "tier4: Tier 4 gateway integration tests",
    "tier5: Tier 5 provider connectivity tests",
    "tier6: Tier 6 data integrity tests",
    "tier7: Tier 7 security baseline tests",
    "security: Security audit tests",
    "journey: User journey simulation",
]
addopts = "-m 'not integration' -n auto"
asyncio_mode = "auto"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
unknown-argument = "warn"
redundant-cast = "ignore"

[tool.ty.src]
exclude = ["**"]

[[tool.ty.overrides]]
include = ["**"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"
invalid-method-override = "ignore"
invalid-assignment = "ignore"
not-iterable = "ignore"

[tool.ruff]
exclude = ["tests/*", "optional-skills/*", "website/*", "tinker-atropos/*"]
select = ["E", "F"]

[tool.uv]
exclude-newer = "2026-05-01T00:00:00Z"
